is-image modifier, fix scrollbar

--- a/src/_scss/components/_modal-fx.scss
+++ b/src/_scss/components/_modal-fx.scss
@@ -311,18 +311,35 @@
 
     }
 
-    // sizes
     .modal-content {
+        // size
+        &.is-huge {
+            width: 100%;
+            margin: 0px 20px;
+            max-height: calc(100vh - 40px);
+        }
         @include from($tablet) {
             &.is-huge {
                 width: 100%;
                 margin: 0px 20px;
+                max-height: calc(100vh - 40px);
             }
         }
         &.is-tiny {
             max-width: 400px;
         }
+
+        // type
+        &.is-image {
+            text-align: center;
+      
+            img {
+                max-height: calc(100vh - 50px);
+            }
+        }
     }
+
+    
 
     // Positioning, center is default
     // .modal-pos-top
